# iso2god-gui

./: .gitignore  LICENSE  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: iso2god-aarch64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
